# Graphics-Engine

./: 3DPlatonic.cpp  3DPlatonic.h  CMakeLists.txt  ColorD.cpp  ColorD.h  Face.cpp  Face.h  Figure.cpp  Figure.h  LSystem3D.cpp  LSystem3D.h  Light.cpp  Light.h  Line2D.cpp  Line2D.h  Point2D.cpp  Point2D.h  README.txt  TransMatrix.cpp  TransMatrix.h  ZBuffer.cpp  ZBuffer.h  easy_image.cc  easy_image.h  engine.cc  run.sh
ambient_light/: ambient_light133.ini
assignments/: .~lock.1_lsystems.ppt#  1_lsystems.ppt  2_linedrawings.ppt  3_figures.ppt  4_zbuffered_wireframe.ppt  5_zbuffering.ppt  6_fractals.ppt  7_lighting.ppt  8_shadowing_texture_mapping(1).ppt  9_spheres_and_cilinders.ppt
l_systems/: attachment002.ini  engine.sh
textures/: textures001.ini
